<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantallas.Calculadora.CalculadoraFragment">


    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/ciruculos_login"
        android:fontFamily="@font/carme"
        android:text="@string/strBtnCalcular"
        android:textStyle="bold"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carme"
        android:text="@string/strResultado"
        android:textColor="#0B0909"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtResultado"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ciruculos_login"
        android:editable="false"
        android:fontFamily="@font/carme"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ciruculos_login"
        android:fontFamily="@font/carme"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtDosis"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ciruculos_login"
        android:fontFamily="@font/carme"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtPresentacion"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ciruculos_login"
        android:fontFamily="@font/carme"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/carme"
        android:text="@string/strPeso"
        android:textColor="#0B0909"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carme"
        android:text="@string/strDosis"
        android:textColor="#0B0909"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carme"
        android:text="@string/strPresentacion"
        android:textColor="#0B0909"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDosis"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carme"
        android:text="@string/strTipo"
        android:textColor="#0B0909"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPresentacion"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>