<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/fechaModificarEvento"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="71dp"
        android:background="@drawable/ciruculos_login"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/eligirFecha"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="@font/carme"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tipoAltaEvento"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textColorHint="#333333"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="114dp"
        android:fontFamily="@font/carme"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/nombreAltaEvento"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textColorHint="#333333"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoModificarEvento"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="@font/carme"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fechaAltaEvento"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textColorHint="#333333"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreModificarEvento"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tipoModificarEvento"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="71dp"
        android:background="@drawable/ciruculos_login"
        android:fontFamily="@font/carme"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nombreModificarEvento"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="71dp"
        android:background="@drawable/ciruculos_login"
        android:fontFamily="@font/carme"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>