<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Registro.Registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="339dp"
        android:layout_height="655dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/recuadro"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/dniUsuarioRegistro"
            android:layout_width="269dp"
            android:layout_height="37dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/ciruculos_login"
            android:fontFamily="@font/carme"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/emailUsuarioRegistro"
            android:layout_width="269dp"
            android:layout_height="37dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/ciruculos_login"
            android:fontFamily="@font/carme"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/contrasenaRegistro"
            android:layout_width="269dp"
            android:layout_height="37dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/ciruculos_login"
            android:fontFamily="@font/carme"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/contrasenaComprobacion"
            android:layout_width="269dp"
            android:layout_height="37dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/ciruculos_login"
            android:fontFamily="@font/carme"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/botonConfirmarRegistro"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/ciruculos_login"
            android:fontFamily="@font/carme"
            android:text="@string/botonConfirmarRegistro"
            android:textStyle="bold"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenaComprobacion" />

        <Button
            android:id="@+id/botonVolverLogin"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/ciruculos_login"
            android:text="@string/botonVolverLogin"
            android:textStyle="bold"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonConfirmarRegistro" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/carme"
            android:text="@string/dniRegistro"
            android:textColor="#0B0909"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/dniUsuarioRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="61dp"
            android:fontFamily="@font/carme"
            android:text="@string/emailRegistro"
            android:textColor="#0B0909"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dniUsuarioRegistro" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="110dp"
            android:fontFamily="@font/carme"
            android:text="@string/contrasena"
            android:textColor="#0B0909"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailUsuarioRegistro" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="91dp"
            android:fontFamily="@font/carme"
            android:text="@string/repetirContraseña"
            android:textColor="#0B0909"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenaRegistro" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="146dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="113dp"
            android:src="@drawable/regis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>